--- a/package.json
+++ b/package.json
@@ -6,45 +6,8 @@
 	"keywords": [],
 	"author": "",
 	"license": "MIT",
-	"repository": {},
-	"dependencies": {
-		"@angular-devkit/build-angular": "~0.900.6",
-		"@angular/animations": "~9.0.6",
-		"@angular/cdk": "^12.0.3",
-		"@angular/cli": "~9.0.6",
-		"@angular/common": "~9.0.6",
-		"@angular/compiler": "~9.0.6",
-		"@angular/compiler-cli": "~9.0.6",
-		"@angular/core": "~9.0.6",
-		"@angular/forms": "~9.0.6",
-		"@angular/language-service": "~7.2.0",
-		"@angular/platform-browser": "~9.0.6",
-		"@angular/platform-browser-dynamic": "~9.0.6",
-		"@angular/platform-server": "~9.0.6",
-		"@angular/router": "~9.0.6",
-		"@angular/upgrade": "~9.0.6",
-		"@types/jasmine": "~3.5.0",
-		"@types/jasminewd2": "~2.0.3",
-		"@types/node": "^12.11.1",
-		"angular-in-memory-web-api": "~0.9.0",
-		"codelyzer": "~4.5.0",
-		"core-js": "^2.5.4",
-		"immutable": "^4.0.0-rc.12",
-		"jasmine-core": "~3.5.0",
-		"jasmine-spec-reporter": "~4.2.1",
-		"karma": "~4.3.0",
-		"karma-chrome-launcher": "~3.1.0",
-		"karma-coverage-istanbul-reporter": "~2.1.0",
-		"karma-jasmine": "~2.0.1",
-		"karma-jasmine-html-reporter": "^1.4.2",
-		"lodash": "^4.16.2",
-		"protractor": "~5.4.3",
-		"rxjs": "~6.5.4",
-		"sa-sdk-javascript": "^1.14.8",
-		"ts-node": "~8.3.0",
-		"tslib": "^1.9.0",
-		"tslint": "~5.18.0",
-		"typescript": "~3.7.5",
-		"zone.js": "~0.10.3"
-	}
+	"scripts": {
+		"publish-ci": "lerna run build && lerna publish --content dist"
+	 },
+	"repository": {}
 }
