--- a/packages/dynamic-component-meihongtest/package.json
+++ b/packages/dynamic-component-meihongtest/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-io-example",
+  "name": "angular-meihongtest2",
   "version": "1.0.3",
   "description": "Example project from an angular.io guide.",
   "scripts": {
