--- a/packages/angular-meihongtest/package.json
+++ b/packages/angular-meihongtest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-meihongtest",
-  "version": "0.0.7",
+  "version": "0.0.7.0-beta.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
