--- a/packages/dynamic-component-meihongtest/package.json
+++ b/packages/dynamic-component-meihongtest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-meihongtest2",
-  "version": "1.0.6.0-beta.0",
+  "version": "1.0.5",
   "description": "Example project from an angular.io guide.",
   "scripts": {
     "ng": "ng",
