--- a/packages/angular-meihongtest/package.json
+++ b/packages/angular-meihongtest/package.json
@@ -1,7 +1,6 @@
 {
   "name": "angular-meihongtest",
-  "version": "1.0.6",
-
+  "version": "0.0.1-alpha.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
