--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"author": "",
 	"license": "MIT",
 	"scripts": {
-		"publish-ci": "lerna run build && lerna publish --content dist",
+		"publish": "lerna run build && lerna publish --contents dist",
 		"boot":"lerna bootstrap --hoist"
 	},
 	"repository": {},
