--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
 	"license": "MIT",
 	"scripts": {
 		"publish": "lerna run build && lerna publish --contents dist",
-		"boot":"lerna bootstrap --hoist"
+		"boot": "lerna bootstrap --hoist"
 	},
 	"repository": {},
 	"devDependencies": {
 		"lerna": "^4.0.0"
+	},
+	"dependencies": {
+		"meihong-test02": "^0.0.3-alpha.0"
 	}
 }
